@@ -1,3 +1,8 @@
+2003-08-25  Ulrich Drepper  <drepper@redhat.com>
+
+	* tst-cancel4.c (do_test): Also unlink tempfname and remove
+	tempmsg in first loop.
+
 2003-08-18  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define
